// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Footer /> renders correctly renders with a language selector 1`] = `
<footer
  className="footer d-flex border-top py-3 px-4"
  role="contentinfo"
>
  <div
    className="container-fluid d-flex"
  >
    <a
      aria-label="edX Home"
      className="d-block"
      href="http://localhost:18000/"
    >
      <img
        alt="alt text"
        src="https://edx-cdn.org/v3/default/logo-trademark.svg"
        style={
          Object {
            "maxHeight": 45,
          }
        }
      />
    </a>
    <div
      className="copyright-col"
    >
      <div
        className="text-gray-500 small"
      >
        Trade Mark text
      </div>
      <div>
        <ul
          className="footer-sub-nav"
        >
          <li>
            <a
              href="http://localhost:18000/about"
            >
              About Us
            </a>
          </li>
          <li>
            <a
              href="http://localhost:18000/tos_and_honor"
            >
              Terms of Service
            </a>
          </li>
          <li>
            <a
              href="http://localhost:18000/privacy"
            >
              Privacy Policy
            </a>
          </li>
          <li>
            <a
              href="http://localhost:18000/tos_and_honor"
            >
              Honor Code
            </a>
          </li>
          <li>
            <a
              href="https://accessibility.mit.edu/"
            >
              Accessibility
            </a>
          </li>
          <li>
            <a
              href="http://localhost:18000/about"
            >
              SUPPORT CENTER
            </a>
          </li>
        </ul>
      </div>
    </div>
    <div
      className="flex-grow-1"
    />
    <form
      className="form-inline"
      onSubmit={[Function]}
    >
      <div
        className="form-group"
      >
        <label
          className="d-inline-block m-0"
          htmlFor="site-footer-language-select"
        >
          Choose Language
        </label>
        <select
          className="form-control-sm mx-2"
          defaultValue="en"
          id="site-footer-language-select"
          name="site-footer-language-select"
        >
          <option
            value="en"
          >
            English
          </option>
          <option
            value="es"
          >
            Español
          </option>
        </select>
        <button
          className="btn btn-outline-primary btn-sm"
          type="submit"
        >
          Apply
        </button>
      </div>
    </form>
  </div>
</footer>
`;

exports[`<Footer /> renders correctly renders without a language selector 1`] = `
<footer
  className="footer d-flex border-top py-3 px-4"
  role="contentinfo"
>
  <div
    className="container-fluid d-flex"
  >
    <a
      aria-label="edX Home"
      className="d-block"
      href="http://localhost:18000/"
    >
      <img
        alt="alt text"
        src="https://edx-cdn.org/v3/default/logo-trademark.svg"
        style={
          Object {
            "maxHeight": 45,
          }
        }
      />
    </a>
    <div
      className="copyright-col"
    >
      <div
        className="text-gray-500 small"
      >
        Trade Mark text
      </div>
      <div>
        <ul
          className="footer-sub-nav"
        >
          <li>
            <a
              href="http://localhost:18000/about"
            >
              About Us
            </a>
          </li>
          <li>
            <a
              href="http://localhost:18000/tos_and_honor"
            >
              Terms of Service
            </a>
          </li>
          <li>
            <a
              href="http://localhost:18000/privacy"
            >
              Privacy Policy
            </a>
          </li>
          <li>
            <a
              href="http://localhost:18000/tos_and_honor"
            >
              Honor Code
            </a>
          </li>
          <li>
            <a
              href="https://accessibility.mit.edu/"
            >
              Accessibility
            </a>
          </li>
          <li>
            <a
              href="http://localhost:18000/about"
            >
              SUPPORT CENTER
            </a>
          </li>
        </ul>
      </div>
    </div>
    <div
      className="flex-grow-1"
    />
  </div>
</footer>
`;

exports[`<Footer /> renders correctly renders without a language selector in es 1`] = `
<footer
  className="footer d-flex border-top py-3 px-4"
  role="contentinfo"
>
  <div
    className="container-fluid d-flex"
  >
    <a
      aria-label="edX Home"
      className="d-block"
      href="http://localhost:18000/"
    >
      <img
        alt="alt text"
        src="https://edx-cdn.org/v3/default/logo-trademark.svg"
        style={
          Object {
            "maxHeight": 45,
          }
        }
      />
    </a>
    <div
      className="copyright-col"
    >
      <div
        className="text-gray-500 small"
      >
        Trade Mark text
      </div>
      <div>
        <ul
          className="footer-sub-nav"
        >
          <li>
            <a
              href="http://localhost:18000/about"
            >
              About Us
            </a>
          </li>
          <li>
            <a
              href="http://localhost:18000/tos_and_honor"
            >
              Terms of Service
            </a>
          </li>
          <li>
            <a
              href="http://localhost:18000/privacy"
            >
              Privacy Policy
            </a>
          </li>
          <li>
            <a
              href="http://localhost:18000/tos_and_honor"
            >
              Honor Code
            </a>
          </li>
          <li>
            <a
              href="https://accessibility.mit.edu/"
            >
              Accessibility
            </a>
          </li>
          <li>
            <a
              href="http://localhost:18000/about"
            >
              SUPPORT CENTER
            </a>
          </li>
        </ul>
      </div>
    </div>
    <div
      className="flex-grow-1"
    />
  </div>
</footer>
`;
